[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/ui/ButtonStart.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/ButtonOptions.gd" type="Script" id=2]
[ext_resource path="res://fonts/jpix5.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/ui/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/ButtonQuitTitle.gd" type="Script" id=5]
[ext_resource path="res://textures/selector.png" type="Texture" id=6]
[ext_resource path="res://fonts/jpix10.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 64
extra_spacing_top = 5
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Selector" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 3.2, 3.49681 )
z_index = 277
texture = ExtResource( 6 )

[node name="Position2DStart" type="Position2D" parent="."]
position = Vector2( 448, 240 )

[node name="Position2DOptions" type="Position2D" parent="."]
position = Vector2( 616, 304 )

[node name="Position2DQuit" type="Position2D" parent="."]
position = Vector2( 384, 384 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 65.0
margin_top = 65.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 846.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "WUNDER"

[node name="LabelStart" type="Label" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 385.0
margin_bottom = 201.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="ButtonStart" type="Button" parent="VBoxContainer/LabelStart"]
margin_left = -3.0
margin_top = 3.0
margin_right = 375.0
margin_bottom = 67.0
focus_neighbour_top = NodePath("../../LabelQuit/ButtonQuit")
focus_neighbour_bottom = NodePath("../../LabelOptions/ButtonOptions")
flat = true
script = ExtResource( 1 )

[node name="LabelOptions" type="Label" parent="VBoxContainer"]
margin_top = 205.0
margin_right = 539.0
margin_bottom = 274.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
align = 1
valign = 1

[node name="ButtonOptions" type="Button" parent="VBoxContainer/LabelOptions"]
margin_left = -1.0
margin_top = 2.0
margin_right = 527.0
margin_bottom = 71.0
focus_neighbour_top = NodePath("../../LabelStart/ButtonStart")
focus_neighbour_bottom = NodePath("../../LabelQuit/ButtonQuit")
flat = true
script = ExtResource( 2 )

[node name="LabelQuit" type="Label" parent="VBoxContainer"]
margin_top = 278.0
margin_right = 308.0
margin_bottom = 347.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "QUIT"
align = 1
valign = 1

[node name="ButtonQuit" type="Button" parent="VBoxContainer/LabelQuit"]
margin_left = -1.0
margin_top = 0.0299997
margin_right = 295.0
margin_bottom = 56.03
focus_neighbour_top = NodePath("../../LabelOptions/ButtonOptions")
focus_neighbour_bottom = NodePath("../../LabelStart/ButtonStart")
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="VBoxContainer/LabelStart/ButtonStart" to="VBoxContainer/LabelStart/ButtonStart" method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="VBoxContainer/LabelOptions/ButtonOptions" to="VBoxContainer/LabelOptions/ButtonOptions" method="_on_ButtonOptions_pressed"]
[connection signal="button_up" from="VBoxContainer/LabelQuit/ButtonQuit" to="VBoxContainer/LabelQuit/ButtonQuit" method="_on_ButtonQuit_button_up"]
